Fixes iOS fullscreen not centered issue. (#2284)

--- a/src/sass/types/video.scss
+++ b/src/sass/types/video.scss
@@ -20,6 +20,7 @@
   overflow: hidden;
   position: relative;
   width: 100%;
+  height: 100%;
 }
 
 // Default to 16:9 ratio but this is set by JavaScript based on config
